Improved landing page and added block categories

--- a/editor.html
+++ b/editor.html
@@ -29,7 +29,7 @@
 
     <style>
         html, body {
-            color: green;
+            color: chartreuse;
             background-color: black;
             font-family: monospace;
             height: 100%;
@@ -44,7 +44,7 @@
             width: 100%;
         }
         #blocklyArea {
-            height: 99%;
+            height: 100%;
         }
     </style>
 </head>
@@ -52,7 +52,7 @@
     <ul id="ld" style="display: none;"></ul>
     <table>
         <tr style="height: 6pt;">
-            <img src="base.png"> Lcreator - Editor<div style="float: right;"><input type="text" style="font-family: monospace;" id="id" value="mod_id"> <button onclick="lsD();">Textures</button> <button onclick="genZip();">Export mod</button></div>
+            <td><img src="base.png"> Lcreator - Editor<div style="float: right;"><input type="text" style="font-family: monospace;" id="id" value="mod_id"> <button onclick="lsD();">Textures</button> <button onclick="genZip();">Export mod</button></div></td>
         </tr>
         <tr>
           <td id="blocklyArea">Blockly will be positioned here.</td>
